--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@ common-js:
 
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="shortcut icon" type="image/png" href="{{ "/favicon.png" | prepend: site.baseurl }}" >
 
   {% include head.html %}
 
